# olympiads-project

./: .gitignore  Dockerfile  README.md  asgi.py  db.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2b437c10a09e_init.py  4b0e3db911ab_add_password_field.py  ba8061fabd0b_add_entity_user.py
backend/: .flake8  Dockerfile  main.py  mypy.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 101050cf5f2b_add_deletedat_column.py  6371a611c4c8_initial.py  721596a9a391_one_more_migration.py  df25095d816a_add_olympiad_initial.py  fe09bafbdeb4_casual_revision.py
backend/loaders/: load_middlewares.py  load_models.py  load_routes.py
backend/scripts/: format.sh  generate_migration.sh  lint.sh
backend/src/: utils.py
backend/src/core/: config.py  front_paths.py  project_variables.py  security.py
backend/src/crud/: __init__.py  base.py  olympiad.py  registered_user.py  task.py  user.py  user_answer.py
backend/src/custom_types/: non_negative_int.py  postitve_int.py
backend/src/db/: base_class.py  session.py
backend/src/enums/: task_type.py
backend/src/models/: __init__.py  olympiad.py  registered_user.py  task.py  user.py  user_answer.py
backend/src/routes/: front_routes.py  get_user.py  olympiads.py  signup.py  tasks.py  token.py  users.py  users_olympiads.py
backend/src/schemas/: __init__.py  answer.py  olympiad.py  registered_user.py  result.py  task.py  token.py  user.py  user_answer.py
build_ep/: build_ep.py  get_models.py  get_routes.py  load_models.py  load_routes.py
configs/: db_config.py  front_paths.py  project_variables.py
frontend/: .babelrc  .eslintignore  .eslintrc  declarations.d.ts  package-lock.json  package.json
frontend/webpack/: webpack.config.js
loaders/: load_middlewares.py  load_models.py  load_routes.py
src/backend/: utils.py
src/frontend/: .babelrc  .eslintignore  .eslintrc  App.tsx  Counter.tsx  Style.scss  index.html  package-lock.json  package.json  tsconfig.json  (+1 more)
(+97 files in other folders)
