[tool.poetry]
name = "olympiads_project"
version = "0.1.0"
description = "Olympiads project for the best University in the Universe"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
